k8s/std20-deployment.yaml
# ============================================================
# Nginx Deployment
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-fe
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx-fe
  template:
    metadata:
      labels:
        app: my-nginx-fe
    spec:
      containers:
        - name: my-container-fe
          image: smile1101/nginx:410c3583c6d304457a6983f3eef85ed6295d9217
          ports:
            - containerPort: 80

---

# ============================================================
# Nginx Service
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: my-service-fe
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: my-nginx-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

# ============================================================
# FastAPI Deployment
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-be
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-fastapi-be
  template:
    metadata:
      labels:
        app: my-fastapi-be
    spec:
      containers:
        - name: my-container-be
          image: smile1101/fastapi:410c3583c6d304457a6983f3eef85ed6295d9217
          ports:
            - containerPort: 8000

---

# ============================================================
# FastAPI Service
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: my-service-be
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: my-fastapi-be
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

# ============================================================
# ALB Ingress
# ============================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-alb-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service-fe
                port:
                  number: 80
